--- a/WindowsFormsApplication3/Form1.en.resx
+++ b/WindowsFormsApplication3/Form1.en.resx
@@ -126,6 +126,33 @@
   <data name="closeButton.Text" xml:space="preserve">
     <value>Close</value>
   </data>
+  <data name="Time.HeaderText" xml:space="preserve">
+    <value>Time</value>
+  </data>
+  <data name="Serial.HeaderText" xml:space="preserve">
+    <value>Serial Name</value>
+  </data>
+  <data name="Number.HeaderText" xml:space="preserve">
+    <value>Number of points</value>
+  </data>
+  <data name="XModMax.HeaderText" xml:space="preserve">
+    <value>X Peak To Peak</value>
+  </data>
+  <data name="YModMax.HeaderText" xml:space="preserve">
+    <value>Y Peak To Peak</value>
+  </data>
+  <data name="ZModMax.HeaderText" xml:space="preserve">
+    <value>Z Peak To Peak</value>
+  </data>
+  <data name="MaxFlexX.HeaderText" xml:space="preserve">
+    <value>X Peak To Peak for Moving Average</value>
+  </data>
+  <data name="MaxFlexY.HeaderText" xml:space="preserve">
+    <value>Y Peak To Peak for Moving Average</value>
+  </data>
+  <data name="MaxFlexZ.HeaderText" xml:space="preserve">
+    <value>Z Peak To Peak for Moving Average</value>
+  </data>
   <data name="clearButton.Text" xml:space="preserve">
     <value>Clear Values</value>
   </data>
@@ -173,22 +200,22 @@
     <value>Z Acceleration</value>
   </data>
   <data name="label10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 13</value>
+    <value>131, 13</value>
   </data>
   <data name="label10.Text" xml:space="preserve">
-    <value>Peak to Peak  X</value>
+    <value>X Peak to Peak Dynamics</value>
   </data>
   <data name="label11.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 13</value>
+    <value>134, 13</value>
   </data>
   <data name="label11.Text" xml:space="preserve">
-    <value>Peak to Peak  Y</value>
+    <value>Y Peak to Peak  Dynamics</value>
   </data>
   <data name="label12.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 13</value>
+    <value>131, 13</value>
   </data>
   <data name="label12.Text" xml:space="preserve">
-    <value>Peak to Peak  Z</value>
+    <value>Z Peak to Peak Dynamics</value>
   </data>
   <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
     <value>170, 17</value>
@@ -202,12 +229,6 @@
   <data name="label14.Text" xml:space="preserve">
     <value>Timer (s)</value>
   </data>
-  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 20</value>
-  </data>
-  <data name="helpToolStripMenuItem.Text" xml:space="preserve">
-    <value>Help</value>
-  </data>
   <data name="какПользоватьсяToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>134, 22</value>
   </data>
@@ -220,31 +241,10 @@
   <data name="оПрограммеToolStripMenuItem.Text" xml:space="preserve">
     <value>About</value>
   </data>
-  <data name="Time.HeaderText" xml:space="preserve">
-    <value>Time</value>
+  <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 20</value>
   </data>
-  <data name="Serial.HeaderText" xml:space="preserve">
-    <value>Serial Name</value>
-  </data>
-  <data name="Number.HeaderText" xml:space="preserve">
-    <value>Number of points</value>
-  </data>
-  <data name="XModMax.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak</value>
-  </data>
-  <data name="YModMax.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak</value>
-  </data>
-  <data name="ZModMax.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak</value>
-  </data>
-  <data name="MaxFlexX.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak for Moving Average</value>
-  </data>
-  <data name="MaxFlexY.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak for Moving Average</value>
-  </data>
-  <data name="MaxFlexZ.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak for Moving Average</value>
+  <data name="helpToolStripMenuItem.Text" xml:space="preserve">
+    <value>Help</value>
   </data>
 </root>
