--- a/WindowsFormsApplication3/Form1.ru-RU.resx
+++ b/WindowsFormsApplication3/Form1.ru-RU.resx
@@ -117,162 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="startButton.Text" xml:space="preserve">
-    <value>Start</value>
+  <data name="dxMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
   </data>
-  <data name="stopButton.Text" xml:space="preserve">
-    <value>Stop</value>
+  <data name="dyMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
   </data>
-  <data name="closeButton.Text" xml:space="preserve">
-    <value>Close</value>
-  </data>
-  <data name="Time.HeaderText" xml:space="preserve">
-    <value>Time</value>
-  </data>
-  <data name="Serial.HeaderText" xml:space="preserve">
-    <value>Serial Name</value>
-  </data>
-  <data name="Number.HeaderText" xml:space="preserve">
-    <value>Number of points</value>
-  </data>
-  <data name="XModMax.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak</value>
-  </data>
-  <data name="YModMax.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak</value>
-  </data>
-  <data name="ZModMax.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak</value>
-  </data>
-  <data name="MaxFlexX.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak for Moving Average</value>
-  </data>
-  <data name="MaxFlexY.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak for Moving Average</value>
-  </data>
-  <data name="MaxFlexZ.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak for Moving Average</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="maxValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minXValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="maxYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="maxXValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minZValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midZValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="clearButton.Text" xml:space="preserve">
-    <value>Clear Values</value>
-  </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 17</value>
-  </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value>X Threshold</value>
-  </data>
-  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>85, 17</value>
-  </data>
-  <data name="label4.Text" xml:space="preserve">
-    <value>Y Threshold</value>
-  </data>
-  <data name="label5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>89, 17</value>
-  </data>
-  <data name="label5.Text" xml:space="preserve">
-    <value> Z Threshold</value>
-  </data>
-  <data name="label6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>110, 13</value>
-  </data>
-  <data name="label6.Text" xml:space="preserve">
-    <value>Accelerometer Values</value>
-  </data>
-  <data name="label7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label7.Text" xml:space="preserve">
-    <value>X Acceleration</value>
-  </data>
-  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label8.Text" xml:space="preserve">
-    <value>Y Acceleration</value>
-  </data>
-  <data name="label9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label9.Text" xml:space="preserve">
-    <value>Z Acceleration</value>
-  </data>
-  <data name="label10.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 13</value>
-  </data>
-  <data name="label10.Text" xml:space="preserve">
-    <value>X Peak to Peak Dynamics</value>
-  </data>
-  <data name="label11.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 13</value>
-  </data>
-  <data name="label11.Text" xml:space="preserve">
-    <value>Y Peak to Peak  Dynamics</value>
-  </data>
-  <data name="label12.Size" type="System.Drawing.Size, System.Drawing">
-    <value>131, 13</value>
-  </data>
-  <data name="label12.Text" xml:space="preserve">
-    <value>Z Peak to Peak Dynamics</value>
-  </data>
-  <data name="label13.Size" type="System.Drawing.Size, System.Drawing">
-    <value>170, 17</value>
-  </data>
-  <data name="label13.Text" xml:space="preserve">
-    <value>Number of points for SMA</value>
-  </data>
-  <data name="label14.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 17</value>
-  </data>
-  <data name="label14.Text" xml:space="preserve">
-    <value>Timer (s)</value>
-  </data>
-  <data name="сохранитьКакXMLToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>156, 22</value>
-  </data>
-  <data name="загрузитьИзXMLToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>156, 22</value>
-  </data>
-  <data name="загрузитьИзXMLToolStripMenuItem.Text" xml:space="preserve">
-    <value>Load from XML</value>
-  </data>
-  <data name="экспортВCSVToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>156, 22</value>
-  </data>
-  <data name="какПользоватьсяToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
-  </data>
-  <data name="оПрограммеToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
+  <data name="dzMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
   </data>
 </root>
