--- a/WindowsFormsApplication3/Form1.en.resx
+++ b/WindowsFormsApplication3/Form1.en.resx
@@ -117,69 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="startButton.Text" xml:space="preserve">
-    <value>Start</value>
-  </data>
-  <data name="stopButton.Text" xml:space="preserve">
-    <value>Stop</value>
-  </data>
-  <data name="closeButton.Text" xml:space="preserve">
-    <value>Close</value>
-  </data>
-  <data name="Time.HeaderText" xml:space="preserve">
-    <value>Time</value>
-  </data>
   <data name="Serial.HeaderText" xml:space="preserve">
     <value>Serial Name</value>
   </data>
-  <data name="Number.HeaderText" xml:space="preserve">
-    <value>Number of points</value>
-  </data>
   <data name="XModMax.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak</value>
+    <value>X Peak To Peak (x10)</value>
   </data>
   <data name="YModMax.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak</value>
+    <value>Y Peak To Peak (x10)</value>
   </data>
   <data name="ZModMax.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak</value>
+    <value>Z Peak To Peak (x10)</value>
   </data>
   <data name="MaxFlexX.HeaderText" xml:space="preserve">
-    <value>X Peak To Peak for Moving Average</value>
+    <value>X Peak To Peak for Moving Average (x10)</value>
   </data>
   <data name="MaxFlexY.HeaderText" xml:space="preserve">
-    <value>Y Peak To Peak for Moving Average</value>
+    <value>Y Peak To Peak for Moving Average (x10)</value>
   </data>
   <data name="MaxFlexZ.HeaderText" xml:space="preserve">
-    <value>Z Peak To Peak for Moving Average</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="maxValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minXValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="maxYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midYValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="maxXValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="minZValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="midZValue.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
+    <value>Z Peak To Peak for Moving Average (x10)</value>
   </data>
   <data name="clearButton.Text" xml:space="preserve">
     <value>Clear Values</value>
@@ -209,24 +166,6 @@
   <data name="label6.Text" xml:space="preserve">
     <value>Accelerometer Values</value>
   </data>
-  <data name="label7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label7.Text" xml:space="preserve">
-    <value>X Acceleration</value>
-  </data>
-  <data name="label8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label8.Text" xml:space="preserve">
-    <value>Y Acceleration</value>
-  </data>
-  <data name="label9.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 13</value>
-  </data>
-  <data name="label9.Text" xml:space="preserve">
-    <value>Z Acceleration</value>
-  </data>
   <data name="label10.Size" type="System.Drawing.Size, System.Drawing">
     <value>131, 13</value>
   </data>
@@ -251,12 +190,6 @@
   <data name="label13.Text" xml:space="preserve">
     <value>Number of points for SMA</value>
   </data>
-  <data name="label14.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 17</value>
-  </data>
-  <data name="label14.Text" xml:space="preserve">
-    <value>Timer (s)</value>
-  </data>
   <data name="сохранитьКакXMLToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 22</value>
   </data>
@@ -268,11 +201,5 @@
   </data>
   <data name="экспортВCSVToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>156, 22</value>
-  </data>
-  <data name="какПользоватьсяToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
-  </data>
-  <data name="оПрограммеToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>134, 22</value>
   </data>
 </root>
