--- a/WindowsFormsApplication3/Form1.ru-RU - копия.resx
+++ b/WindowsFormsApplication3/Form1.ru-RU - копия.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="dxMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
+  </data>
+  <data name="dyMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
+  </data>
+  <data name="dzMaskedBox.Mask" xml:space="preserve">
+    <value>0,00</value>
+  </data>
 </root>
